LIVIJUKU-372 Virheelliseen kenttään kohdistaminen
* Uusi direktiivi <div focus-to-invalid></div> joka kuuntelee scopelta tulevia 'focus-invalid' eventtejä ja kohdistaa ensimmäiseen sisällään olevaan .ng-invalid classin omaavaan elementtiin

--- a/app/scripts/views/hakija/hakemus.html
+++ b/app/scripts/views/hakija/hakemus.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" focus-to-invalid>
   <div ng-hide="sallittu('view-oma-hakemus')">
     <p>Ei omien hakemusten katseluoikeutta.</p>
   </div>
