LIVIJUKU-383 Yhteensä - arvo pois avustuskohteiden headereista ja arvojen näyttö inputtien alapuolelle

--- a/app/scripts/views/hakija/hakemus.html
+++ b/app/scripts/views/hakija/hakemus.html
@@ -150,13 +150,18 @@
         <juku-avustusluokka-panel luokka="avustuskohdeluokka"
                                   name="{{avustuskohdeLuokat[avustuskohdeluokka.tunnus].nimi}}"
                                   hakemus="hakemus"
+                                  kohde="avustuskohdeluokka"
                                   ng-repeat="avustuskohdeluokka in avustuskohdeluokat">
+
           <juku-avustuskohde vuosi="vuosi"
                              vertailuarvot="haeVertailuarvot(avustuskohde.avustuskohdeluokkatunnus,avustuskohde.avustuskohdelajitunnus)"
-                             hakemustyyppi="tyyppi" kohde="avustuskohde" alv="alv"
+                             hakemustyyppi="tyyppi"
+                             kohde="avustuskohde"
+                             alv="alv"
                              hakemus="hakemus"
                              name="{{avustuskohdeLuokat[avustuskohde.avustuskohdeluokkatunnus].avustuskohdelajit[avustuskohde.avustuskohdelajitunnus].nimi}}"
                              ng-repeat="avustuskohde in avustuskohdeluokka.avustuskohteet"/>
+
         </juku-avustusluokka-panel>
 
         <div class="row">
