--- a/app/scripts/views/yhteinen/jkuAvustusluokkaPanel.html
+++ b/app/scripts/views/yhteinen/jkuAvustusluokkaPanel.html
@@ -1,15 +1,27 @@
-<div class="panel panel-default">
+<div class="avustusluokka panel panel-default">
   <div class="panel-heading">
-    <div class="row">
-      <div class="col-md-9">
-        <h4 class="panel-title">{{name}}</h4>
-      </div>
-      <div class="col-md-3">
-        <div class="pull-right">
-          <h4 class="panel-title">{{sumHaettavaAvustusOverLuokka(luokka) | currency:"&euro;"}} (sis. alv)</h4>
+    <h4 class="panel-title">{{name}}</h4>
+  </div>
+  <div class="panel-body">
+    <div ng-transclude></div>
+
+    <div class="avustusluokka__summa">
+      <h4>Yhteensä (ALV 10%):</h4>
+      <div class="row">
+
+        <div class="col-md-4">
+          Haettava valtionavustus: {{ kokonaisHaettavaAvustus(kohde.avustuskohteet)  | currency }}
         </div>
+
+        <div class="col-md-4">
+          Kunnan oma rahoitusosuus: {{ kokonaisOmarahoitus(kohde.avustuskohteet) | currency }}
+        </div>
+
+        <div class="col-md-4">
+          {{ kokonaisOmarahoitus(kohde.avustuskohteet) + kokonaisHaettavaAvustus(kohde.avustuskohteet) | currency }}
+        </div>
+
       </div>
     </div>
   </div>
-  <div class="panel-body" ng-transclude></div>
 </div>
