LIVIJUKU-383 Kohteet avustusluokka-panel:ille myös käsittelijän näkymässä

--- a/app/scripts/views/kasittelija/hakemus.html
+++ b/app/scripts/views/kasittelija/hakemus.html
@@ -89,6 +89,7 @@
       <juku-avustusluokka-panel luokka="avustuskohdeluokka"
                                 name="{{avustuskohdeLuokat[avustuskohdeluokka.tunnus].nimi}}"
                                 hakemus="hakemus"
+                                kohde="avustuskohdeluokka"
                                 ng-repeat="avustuskohdeluokka in avustuskohdeluokat">
         <juku-avustuskohde vuosi="vuosi"
                            vertailuarvot="haeVertailuarvot(avustuskohde.avustuskohdeluokkatunnus,avustuskohde.avustuskohdelajitunnus)"
