--- a/app/scripts/views/kasittelija/hakemus.html
+++ b/app/scripts/views/kasittelija/hakemus.html
@@ -30,11 +30,7 @@
     </juku-form-row>
 
     <juku-form-row ng-show="hasPaatos(hakemus.hakemustilatunnus)" id="hakemus-paatoslinkit">
-        <a href="{{haePaatosPdf()}}" target="_blank"><span
-          class="glyphicon glyphicon-file"></span>
-          Avaa päätös (PDF)</a>
-        <a href="resources/OIKAISUVAATIMUSOSOITUS.docx" target="_blank"><span
-          class="glyphicon glyphicon-file"></span> Avaa oikaisuvaatimusosoitus (DOCX)</a>
+        <juku-paatos-tiedot></juku-paatos-tiedot>
     </juku-form-row>
 
     <div class="row">
