--- a/app/scripts/views/yhteinen/jkuAvustusluokkaPanel.html
+++ b/app/scripts/views/yhteinen/jkuAvustusluokkaPanel.html
@@ -4,23 +4,18 @@
   </div>
   <div class="panel-body">
     <div ng-transclude></div>
-
     <div class="avustusluokka__summa">
-      <h4>Yhteensä (ALV 10%):</h4>
+      <h4>Yhteensä (ALV {{kohde.avustuskohteet[0].alv}}%):</h4>
       <div class="row">
-
         <div class="col-md-4">
-          Haettava valtionavustus: {{ kokonaisHaettavaAvustus(kohde.avustuskohteet)  | currency }}
+          Haettava valtionavustus: {{ kokonaisHaettavaAvustus(kohde.avustuskohteet) | currency }}
         </div>
-
         <div class="col-md-4">
           Kunnan oma rahoitusosuus: {{ kokonaisOmarahoitus(kohde.avustuskohteet) | currency }}
         </div>
-
         <div class="col-md-4">
           {{ kokonaisOmarahoitus(kohde.avustuskohteet) + kokonaisHaettavaAvustus(kohde.avustuskohteet) | currency }}
         </div>
-
       </div>
     </div>
   </div>
