LIVIJUKU-393 Bug: Poistumisvaroitus tulee myös silloin kun tallentaminen ei ole mahdollista hakemuksella

--- a/app/scripts/views/hakija/hakemus.html
+++ b/app/scripts/views/hakija/hakemus.html
@@ -26,7 +26,7 @@
       </juku-tabs>
     </juku-navigation>
 
-    <juku-form name="hakemusForm" juku-poistumisvaroitus="">
+    <juku-form name="hakemusForm" juku-poistumisvaroitus="{{hakemusKeskenerainen()}}">
       <h1>Joukkoliikenteen {{tyyppi | toApplicationName}} {{hakemus.vuosi}}</h1>
 
       <juku-form-row ng-show="hasPaatos(hakemus.hakemustilatunnus)">
