--- a/app/scripts/views/kasittelija/paatos.html
+++ b/app/scripts/views/kasittelija/paatos.html
@@ -69,7 +69,7 @@
         <p>{{avustus| currency:"&euro;"}}</p>
       </div>
     </div>
-    <form name="paatosForm" juku-poistumisvaroitus="">
+    <form name="paatosForm" juku-poistumisvaroitus="{{hakemusTarkastettu()}}">
       <div class="form-group">
         <label>Päätösteksti</label>
         <div ng-show="hakemusTarkastettu()">
