--- a/app/scripts/views/hakija/elyhakemus.html
+++ b/app/scripts/views/hakija/elyhakemus.html
@@ -8,7 +8,7 @@
       </juku-link-prev>
     </juku-navigation>
 
-    <juku-form name="elyhakemusForm" juku-poistumisvaroitus="">
+    <juku-form name="elyhakemusForm" juku-poistumisvaroitus="{{hakemusKeskenerainen()}}">
       <h1>ELYjen määrärahatarpeet {{hakemus.vuosi}}</h1>
 
       <div class="row" ng-show="hasPaatos(hakemus.hakemustilatunnus)">
