LIVIJUKU-362 - Hakemusnäkymän yhtenäistäminen
* Käsittelijä ja hakija käyttämään samaa hakemus-näkymää (views/hakemus/index.html)

--- a/app/scripts/components/controls/index.styl
+++ b/app/scripts/components/controls/index.styl
@@ -1,8 +1,9 @@
 .controls
   clearfix()
-  height: 37px
   line-height: 37px
   margin-top: 2em
+  .confirmation
+    margin-bottom: 1em
 .controls__buttons
   float: right
   button
