--- a/app/scripts/components/navigationLinks/index.styl
+++ b/app/scripts/components/navigationLinks/index.styl
@@ -2,6 +2,8 @@
   margin-top: 2em
   clearfix()
 
-  .view-link:last-child
-    float: right
+  .view-link--prev
+    float: prev
 
+  .view-link--next
+    float: right
