--- a/app/scripts/views/kasittelija/suunnittelu.html
+++ b/app/scripts/views/kasittelija/suunnittelu.html
@@ -98,7 +98,7 @@
                 })">
 
                 <span ng-show="hakemusPaatetty(hakemus)">
-                  Päätetty
+                  Päätökseen
                 </span>
 
                 <span ng-hide="hakemusPaatetty(hakemus)">
