LIVIJUKU-398 Seurantalomake demo (keskeneräinen)

--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -36,3 +36,4 @@
 @import '../scripts/components/controls'
 @import '../scripts/components/navigationLinks'
 @import '../scripts/components/confirmation'
+@import '../scripts/components/seurantalomakePaikallisliikenne'
