--- a/app/scripts/views/yhteinen/tunnuslukujenSyottaminen.html
+++ b/app/scripts/views/yhteinen/tunnuslukujenSyottaminen.html
@@ -26,7 +26,8 @@
     </div>
   </div>
   <div class="row alert alert-warning">
-    <p>Tällä hetkellä numerokenttien (esim. nousut) editointi ei toimi kunnolla Firefox:ssa, ui-grid komponentin päivitystä
+    <p>Tällä hetkellä numerokenttien (esim. nousut) editointi ei toimi kunnolla Firefox:ssa, ui-grid komponentin
+      päivitystä
       odotellaan.</p>
   </div>
   <div class="row">
@@ -48,6 +49,12 @@
       <h3>Bruttoliikenteen tarjouskilpailut</h3>
       <button id="uusiRivi" ng-click="uusiRivi()">Lisää rivi</button>
       <div id="lks_grid3" ui-grid="lks_grid3" ui-grid-edit ui-grid-cellnav class="grid"></div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <h3>Paikallisliikenne tai muu PSA:n mukainen liikenne</h3>
+      <juku-seurantalomake-paikallisliikenne></juku-seurantalomake-paikallisliikenne>
     </div>
   </div>
 </div>
